# Auction-app

./: Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml
auction/: admin.py  models.py  serializers.py  tasks.py
auction/migrations/: 0001_initial.py  0001_initial_squashed_0002_rename_base_price.py  0002_rename_base_price.py
config/: asgi.py  settings.py  urls.py
item/: admin.py  models.py  serializers.py
item/migrations/: 0001_initial.py
lot/: admin.py  consumers.py  filters.py  middlewares.py  models.py  routers.py  routing.py  serializers.py  urls.py  validators.py  views.py
lot/migrations/: 0001_initial.py  0002_offer.py
lot/services/: change_price_service.py
